footer: fix CC0 logos in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -259,14 +259,9 @@ footer {
       width: 0.75rem;
       vertical-align: middle;
       margin: 0 1px;
-    }
-
-    #title {
-      svg {
-        @media (prefers-color-scheme: dark) {
-          path {
-            fill: white;
-          }
+      @media (prefers-color-scheme: dark) {
+        path {
+          fill: white;
         }
       }
     }
